--- a/sample-elasticbeanstalk.cabal
+++ b/sample-elasticbeanstalk.cabal
@@ -20,3 +20,10 @@ executable sample-elasticbeanstalk
                      , http-types
                      , wai
                      , warp
+
+test-suite sample-elasticbeanstalk-test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Main.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
